--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "VisionNav",
-    "slug": "VisionNav",
+    "slug": "visionnav",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -31,6 +31,12 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "975d57e1-dc49-48e4-b4ed-10c291681b3a"
+      }
+    },
+    "owner": "uniqsea"
   }
 }
