--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
