--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-camera": "~15.0.16",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.18.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
