--- a/package.json
+++ b/package.json
@@ -16,36 +16,36 @@
     "@expo/vector-icons": "^14.0.2",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
-    "expo-camera": "~15.0.16",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-location": "~17.0.1",
+    "expo": "^52.0.0",
+    "expo-camera": "~16.0.5",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.1",
     "expo-maps": "^0.5.0",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.18.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-web-browser": "~14.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-web": "~0.19.13",
     "visionnav": "file:"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest": "~29.7.0",
+    "jest-expo": "^52.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
