--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@appandflow/react-native-google-autocomplete": "^2.0.1",
+    "@expo/vector-icons": "^14.0.3",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@react-navigation/native": "^6.0.2",
-    "expo": "^52.0.0",
+    "@tamagui/babel-plugin": "^1.116.14",
+    "@tamagui/config": "^1.116.14",
+    "@tamagui/core": "^1.116.14",
+    "@tamagui/web": "^1.116.14",
+    "axios": "^1.7.7",
+    "expo": "^52.0.7",
     "expo-camera": "~16.0.5",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
@@ -30,21 +36,26 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.9.0",
+    "react-native-ui-lib": "^7.34.0",
     "react-native-web": "~0.19.13",
+    "tamagui": "^1.116.14",
     "visionnav": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash": "^4.17.13",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
-    "jest": "~29.7.0",
-    "jest-expo": "^52.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.3.3"
   },
