--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "polyline": "^0.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
@@ -46,12 +47,12 @@
     "react-native-svg": "^15.9.0",
     "react-native-ui-lib": "^7.34.0",
     "react-native-web": "~0.19.13",
-    "tamagui": "^1.116.14",
     "visionnav": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/lodash": "^4.17.13",
+    "@types/polyline": "^0.1.32",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
