--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "polyline": "^0.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.18.0",
