--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/lodash": "^4.17.13",
+    "@types/polyline": "^0.1.32",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
