--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "geolib": "^3.3.4",
     "polyline": "^0.2.0",
+    "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
@@ -42,7 +44,8 @@
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.9.0",
     "react-native-ui-lib": "^7.34.0",
